--- a/signup.html
+++ b/signup.html
@@ -111,7 +111,7 @@
           ><i class="fa fa-envelope"></i>courses@example.ie</a
         >
 
-        <a href="tel:+353 1 234 5678"
+        <a href="tel:+35312345678"
           ><i class="fa fa-phone"></i>+353 1 234 5678</a
         >
       </div>
