Added few lines in course description

--- a/signup.html
+++ b/signup.html
@@ -40,6 +40,7 @@
             <h2>&euro;2.999,99</h2>
           </div>
           <div class="signup-card__desc">
+            Designing web pages using HTML5 and CSS3<br /><br />
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo natus
             expedita debitis impedit. Iste, sint dolorum veritatis alias
             temporibus vitae sed excepturi est repudiandae doloribus, laborum
@@ -63,6 +64,7 @@
             <h2>&euro;3.999,99</h2>
           </div>
           <div class="signup-card__desc">
+            Developing interactive web pages using HTML5, CSS3 and Javascript<br /><br />
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo natus
             expedita debitis impedit. Iste, sint dolorum veritatis alias
             temporibus vitae sed excepturi est repudiandae doloribus, laborum
@@ -88,6 +90,8 @@
             <h2>&euro;5.999,99</h2>
           </div>
           <div class="signup-card__desc">
+            Developing interactive web applications using HTML5, CSS3,
+            Javascript and Django<br /><br />
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo natus
             expedita debitis impedit. Iste, sint dolorum veritatis alias
             temporibus vitae sed excepturi est repudiandae doloribus, laborum
