--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
     </header>
     <section class="hero">
       <div id="hero-image"></div>
-      <div id="hero-text"></div>
+      <div id="hero-text">
+        <h1>Your future starts here</h1>
+        <p>Our courses</p>
+      </div>
     </section>
     <footer>
       <div class="social-left">
