Changed placeholder texts

--- a/courses.html
+++ b/courses.html
@@ -9,7 +9,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="assets/css/style.css" />
-    <title>Document</title>
+    <title>Our Courses</title>
   </head>
   <body>
     <header>
@@ -36,10 +36,11 @@
             <h2>HTML 5</h2>
           </div>
           <div class="course-card__desc">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo natus
-            expedita debitis impedit. Iste, sint dolorum veritatis alias
-            temporibus vitae sed excepturi est repudiandae doloribus, laborum
-            molestiae, corporis ullam eligendi.
+            HTML abbreviation for Hyper Text Markup Language, is a Markup
+            Language to put together the structure of a web page. Think of HTML
+            as the skeleton of a webpage. There is no website or webpage on the
+            internet that does not use HTML. Without HTML, the web would not be
+            possible.
           </div>
           <div class="course-card__link">
             <a href="#">Read more</a>
@@ -54,10 +55,12 @@
             <h2>CSS 3</h2>
           </div>
           <div class="course-card__desc">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo natus
-            expedita debitis impedit. Iste, sint dolorum veritatis alias
-            temporibus vitae sed excepturi est repudiandae doloribus, laborum
-            molestiae, corporis ullam eligendi.
+            CSS stands for Cascading Style Sheets. Think of it as the skin and
+            clothing for the HTML webpage. CSS is simply a list of style
+            properties that get applied to HTML elements. Just the way clothing
+            is put onto a human body, similarly, CSS styling is applied on HTML
+            elements. CSS enhances the colors, layout, and styling of the HTML
+            webpage, making it look more beautiful and professional.
           </div>
           <div class="course-card__link">
             <a href="#">Read more</a>
@@ -72,10 +75,12 @@
             <h2>Javascript</h2>
           </div>
           <div class="course-card__desc">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo natus
-            expedita debitis impedit. Iste, sint dolorum veritatis alias
-            temporibus vitae sed excepturi est repudiandae doloribus, laborum
-            molestiae, corporis ullam eligendi.
+            JavaScript is a programming language that allows you to implement
+            complex things on web pages. Every time a web page does more than
+            just sit there and display static information for you to look
+            at—displaying timely content updates, interactive maps, animated
+            2D/3D graphics, scrolling video jukeboxes, or more—you can bet that
+            JavaScript is probably involved.
           </div>
           <div class="course-card__link">
             <a href="#">Read more</a>
@@ -91,10 +96,11 @@
             <h2>Python and Django</h2>
           </div>
           <div class="course-card__desc">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo natus
-            expedita debitis impedit. Iste, sint dolorum veritatis alias
-            temporibus vitae sed excepturi est repudiandae doloribus, laborum
-            molestiae, corporis ullam eligendi.
+            Django is an extremely popular and fully featured server-side web
+            framework, written in Python. This course shows you why Django is
+            one of the most popular web server frameworks, how to set up a
+            development environment, and how to start using it to create your
+            own web applications.
           </div>
           <div class="course-card__link">
             <a href="#">Read more</a>
