--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="assets/css/style.css" />
+    <title>Contact Us</title>
   </head>
   <body>
     <header>
