--- a/signup.html
+++ b/signup.html
@@ -9,7 +9,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="assets/css/style.css" />
-    <title>Document</title>
+    <title>Sign Up</title>
   </head>
   <body>
     <header>
@@ -41,10 +41,8 @@
           </div>
           <div class="signup-card__desc">
             Designing web pages using HTML5 and CSS3<br /><br />
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo natus
-            expedita debitis impedit. Iste, sint dolorum veritatis alias
-            temporibus vitae sed excepturi est repudiandae doloribus, laborum
-            molestiae, corporis ullam eligendi.
+            In this course, you'll learn how to create web pages using HTML5 and
+            style them using CSS3
           </div>
           <div class="signup-card__link">
             <a href="#">Sign up!</a>
@@ -65,10 +63,8 @@
           </div>
           <div class="signup-card__desc">
             Developing interactive web pages using HTML5, CSS3 and Javascript<br /><br />
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo natus
-            expedita debitis impedit. Iste, sint dolorum veritatis alias
-            temporibus vitae sed excepturi est repudiandae doloribus, laborum
-            molestiae, corporis ullam eligendi.
+            In this course, you'll learn how to create web pages using HTML5,
+            style them using CSS3, and make them interactive using Javascript
           </div>
           <div class="signup-card__link">
             <a href="#">Sign up!</a>
@@ -92,10 +88,8 @@
           <div class="signup-card__desc">
             Developing interactive web applications using HTML5, CSS3,
             Javascript and Django<br /><br />
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo natus
-            expedita debitis impedit. Iste, sint dolorum veritatis alias
-            temporibus vitae sed excepturi est repudiandae doloribus, laborum
-            molestiae, corporis ullam eligendi.
+            In this course, you'll learn how to develop database driven web
+            applications using HTML5, CSS3, Javascript and Django
           </div>
           <div class="signup-card__link">
             <a href="#">Sign up!</a>
