--- a/contact.html
+++ b/contact.html
@@ -50,6 +50,15 @@
             required
           />
 
+          <label for="mail">Email address</label>
+          <input
+            type="email"
+            id="mail"
+            name="mail"
+            placeholder="Your email address"
+            required
+          />
+
           <label for="phone">Phone Number (Optional)</label>
           <input
             type="tel"
