--- a/contact.html
+++ b/contact.html
@@ -1,107 +1,108 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <script
-      src="https://kit.fontawesome.com/2bbdb9e631.js"
-      crossorigin="anonymous"
-    ></script>
-    <link rel="stylesheet" href="assets/css/style.css" />
-    <title>Contact Us</title>
-  </head>
-  <body>
-    <header>
-      <a href="index.html"><h2 class="logo">WebDev Courses</h2></a>
-      <nav>
-        <ul id="menu">
-          <li><a href="index.html"> Home</a></li>
-          <li><a href="courses.html">Our courses</a></li>
-          <li><a href="signup.html">Sign Up</a></li>
-          <li><a class="active" href="contact.html">Contact Us</a></li>
-        </ul>
-      </nav>
-    </header>
-    <section class="contactus">
-      <h1 class="contactus__title">Contact us</h1>
+  <html lang="en">
+    <head>
+      <meta name="viewport" content="width=device-width, initial-scale=1" />
+      <script
+        src="https://kit.fontawesome.com/2bbdb9e631.js"
+        crossorigin="anonymous"
+      ></script>
+      <link rel="stylesheet" href="assets/css/style.css" />
+      <title>Contact Us</title>
+    </head>
+    <body>
+      <header>
+        <a href="index.html"><h2 class="logo">WebDev Courses</h2></a>
+        <nav>
+          <ul id="menu">
+            <li><a href="index.html"> Home</a></li>
+            <li><a href="courses.html">Our courses</a></li>
+            <li><a href="signup.html">Sign Up</a></li>
+            <li><a class="active" href="contact.html">Contact Us</a></li>
+          </ul>
+        </nav>
+      </header>
+      <section class="contactus">
+        <h1 class="contactus__title">Contact us</h1>
 
-      <div class="contactus__form">
-        <form
-          method="POST"
-          action="https://formdump.codeinstitute.net/"
-          class="signup-form"
-        >
-          <label for="fname">First Name</label>
-          <input
-            type="text"
-            id="fname"
-            name="fname"
-            placeholder="Your first name"
-            required
-          />
+        <div class="contactus__form">
+          <form
+            method="POST"
+            action="https://formdump.codeinstitute.net/"
+            class="signup-form"
+          >
+            <label for="fname">First Name</label>
+            <input
+              type="text"
+              id="fname"
+              name="fname"
+              placeholder="Your first name"
+              required
+            />
 
-          <label for="lname">Last Name</label>
-          <input
-            type="text"
-            id="lname"
-            name="lname"
-            placeholder="Your last name"
-            required
-          />
+            <label for="lname">Last Name</label>
+            <input
+              type="text"
+              id="lname"
+              name="lname"
+              placeholder="Your last name"
+              required
+            />
 
-          <label for="mail">Email address</label>
-          <input
-            type="email"
-            id="mail"
-            name="mail"
-            placeholder="Your email address"
-            required
-          />
+            <label for="mail">Email address</label>
+            <input
+              type="email"
+              id="mail"
+              name="mail"
+              placeholder="Your email address"
+              required
+            />
 
-          <label for="phone">Phone Number (Optional)</label>
-          <input
-            type="tel"
-            id="phone"
-            name="phone"
-            placeholder="Phone number"
-          />
+            <label for="phone">Phone Number (Optional)</label>
+            <input
+              type="tel"
+              id="phone"
+              name="phone"
+              placeholder="Phone number"
+            />
 
-          <label for="interest">What are you interested in?</label>
-          <select id="interest" name="interest">
-            <option value="enrollment">Enrollment</option>
-            <option value="exams">Exams</option>
-            <option value="deadlines">Deadlines</option>
-            <option value="general_question">General question</option>
-          </select>
+            <label for="interest">What are you interested in?</label>
+            <select id="interest" name="interest">
+              <option value="enrollment">Enrollment</option>
+              <option value="exams">Exams</option>
+              <option value="deadlines">Deadlines</option>
+              <option value="general_question">General question</option>
+            </select>
 
-          <label for="message">Subject</label>
-          <textarea
-            id="message"
-            name="message"
-            placeholder="Enter your message here..."
-            style="height: 200px"
-            required
-          ></textarea>
+            <label for="message">Subject</label>
+            <textarea
+              id="message"
+              name="message"
+              placeholder="Enter your message here..."
+              style="height: 200px"
+              required
+            ></textarea>
 
-          <input type="submit" value="Submit" />
-        </form>
-      </div>
-    </section>
-    <footer>
-      <div class="social-left">
-        <a href="https://facebook.com"><i class="fa fa-facebook"></i></a>
-        <a href="https://twitter.com"><i class="fa fa-twitter"></i></a>
-        <a href="https://instagram.com"><i class="fa fa-instagram"></i></a>
-        <a href="https://youtube.com"><i class="fa fa-youtube"></i></a>
-      </div>
-      <div class="social-right">
-        <a href="mailto:courses@example.ie"
-          ><i class="fa fa-envelope"></i>courses@example.ie</a
-        >
+            <input type="submit" value="Submit" />
+          </form>
+        </div>
+      </section>
+      <footer>
+        <div class="social-left">
+          <a href="https://facebook.com"><i class="fa fa-facebook"></i></a>
+          <a href="https://twitter.com"><i class="fa fa-twitter"></i></a>
+          <a href="https://instagram.com"><i class="fa fa-instagram"></i></a>
+          <a href="https://youtube.com"><i class="fa fa-youtube"></i></a>
+        </div>
+        <div class="social-right">
+          <a href="mailto:courses@example.ie"
+            ><i class="fa fa-envelope"></i>courses@example.ie</a
+          >
 
-        <a href="tel:+35312345678"
-          ><i class="fa fa-phone"></i>+353 1 234 5678</a
-        >
-      </div>
-    </footer>
-  </body>
+          <a href="tel:+35312345678"
+            ><i class="fa fa-phone"></i>+353 1 234 5678</a
+          >
+        </div>
+      </footer>
+    </body>
+  </html>
 </html>
